--- a/ui/package.json
+++ b/ui/package.json
@@ -6,14 +6,16 @@
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.5",
     "@testing-library/user-event": "12.6.3",
-    "@types/jest": "26.0.20",
-    "@types/node": "12.19.16",
-    "@types/react": "17.0.1",
-    "@types/react-dom": "17.0.0",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.25",
+    "@types/react": "^17.0.1",
+    "@types/react-dom": "^17.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
-    "typescript": "4.1.4",
+    "typescript": "^4.1.5",
     "web-vitals": "1.1.0"
   },
   "scripts": {
@@ -42,6 +44,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router": "^5.1.11",
+    "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "4.15.0",
     "@typescript-eslint/parser": "4.15.0",
     "eslint": "7.19.0",
