--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "sass": "^1.32.8",
     "typescript": "^4.1.5",
     "web-vitals": "1.1.0"
   },
