prototype gh-actions for testing

--- a/ui/package.json
+++ b/ui/package.json
@@ -24,8 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:ci": "CI=true react-scripts test --coverage",
     "eject": "react-scripts eject",
-    "lint": "eslint '*/**/*.{js,ts,tsx}' --fix"
+    "lint": "eslint '*/**/*.js,ts,tsx}' --fix"
   },
   "proxy": "http://localhost:8080",
   "eslintConfig": {
