--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -16,6 +16,7 @@ jobs:
       - uses: eskatos/gradle-command-action@v1
         with:
           wrapper-cache-enabled: true
+          gradle-executable: /api
           build-root-directory: /api
           wrapper-directory: /api
           dependencies-cache-enabled: true
