--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -6,19 +6,12 @@ jobs:
   gradle:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
           java-version: 15
-      - uses: eskatos/gradle-command-action@v1
-        with:
-          wrapper-cache-enabled: true
-          gradle-executable: /api/gradlew
-          build-root-directory: /api
-          dependencies-cache-enabled: true
-          dependencies-cache-key: gradle/dependency-locks/**
-          dependencies-cache-exact: true
-          arguments: check --scan
+      - name: Run simple gradle tests
+        run: make test-api
