--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -1,17 +1,17 @@
-name: API-tests
+#name: API-tests
 
-on: [push, pull_request]
+#on: [push, pull_request]
 
-jobs:
-  gradle:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
-        with:
-          java-version: 15
-      - name: Run simple gradle tests
-        run: make test-api
+#jobs:
+#  gradle:
+#    strategy:
+#      matrix:
+#        os: [ubuntu-latest, macos-latest]
+#    runs-on: ${{ matrix.os }}
+#    steps:
+#      - uses: actions/checkout@v2
+#      - uses: actions/setup-java@v1
+#        with:
+#          java-version: 15
+#      - name: Run simple gradle tests
+#        run: make test-api
